@@ -36,7 +36,7 @@ class subtitlesgr:
     def get(self, query):
 
         try:
-            filter = ['freeprojectx', 'subs4series', 'Εργαστήρι Υποτίτλων'.decode('utf-8')]
+            filtered = ['freeprojectx', 'subs4series', 'Εργαστήρι Υποτίτλων'.decode('utf-8')]
 
             query = ' '.join(urllib.unquote_plus(re.sub('%\w\w', ' ', urllib.quote_plus(query))).split())
 
@@ -60,7 +60,7 @@ class subtitlesgr:
                 except:
                     uploader = 'other'
 
-                if uploader in filter:
+                if uploader in filtered:
                     raise Exception()
 
                 if uploader == '':
@@ -97,15 +97,15 @@ class subtitlesgr:
         except:
             rating = 0
 
-        if (rating < 100):
+        if rating < 100:
             rating = 1
-        elif (rating >= 100 and rating < 200):
+        elif rating >= 100 and rating < 200:
             rating = 2
-        elif (rating >= 200 and rating < 300):
+        elif rating >= 200 and rating < 300:
             rating = 3
-        elif (rating >= 300 and rating < 400):
+        elif rating >= 300 and rating < 400:
             rating = 4
-        elif (rating >= 400):
+        elif rating >= 400:
             rating = 5
 
         return rating
@@ -118,14 +118,14 @@ class subtitlesgr:
             url = client.request(url, output='geturl')
 
             data = urllib2.urlopen(url, timeout=10).read()
-            zip = zipfile.ZipFile(StringIO.StringIO(data))
-            files = zip.namelist()
+            zip_file = zipfile.ZipFile(StringIO.StringIO(data))
+            files = zip_file.namelist()
             files = [i for i in files if i.startswith('subs/')]
             srt = [i for i in files if any(i.endswith(x) for x in ['.srt', '.sub'])]
             rar = [i for i in files if any(i.endswith(x) for x in ['.rar', '.zip'])]
 
             if len(srt) > 0:
-                result = zip.open(srt[0]).read()
+                result = zip_file.open(srt[0]).read()
 
                 subtitle = os.path.basename(srt[0])
 
@@ -136,9 +136,8 @@ class subtitlesgr:
 
                 return subtitle
 
-
             elif len(rar) > 0:
-                result = zip.open(rar[0]).read()
+                result = zip_file.open(rar[0]).read()
 
                 f = os.path.splitext(urlparse.urlparse(rar[0]).path)[1][1:]
                 f = os.path.join(path, 'file.%s' % f)
@@ -150,22 +149,20 @@ class subtitlesgr:
 
                 if len(files) == 0: return
 
-                if f.lower().endswith(('.rar')):
+                if f.lower().endswith('.rar'):
+
                     try:
                         opened_rar = rarfile.RarFile(f)
                         opened_rar.extractall(path)
-	            except:
-                        __addon__ = xbmcaddon.Addon()
-                        __addonname__ = __addon__.getAddonInfo('name')
-                        __icon__ = __addon__.getAddonInfo('icon')
+                    except:
                         line1 = "RAR file parse error!!!"
-                        time = 3000 #in miliseconds
-                        xbmc.executebuiltin('Notification(%s, %s, %d, %s)'%(__addonname__,line1, time, __icon__))
-                        pass
+                        control.infoDialog(message=line1)
+
                 else:
                     control.execute('Extract("%s","%s")' % (f, path))
 
                 for i in range(0, 10):
+
                     try:
                         dirs, files = control.listDir(path)
                         if len(files) > 1: break
